[gd_scene load_steps=17 format=3 uid="uid://bfsppfmdcifny"]

[ext_resource type="Texture2D" uid="uid://8y3wpg8ccit" path="res://assets/effects/robot_death/explosionSmoke1.png" id="1_3bavs"]
[ext_resource type="Script" path="res://entities/enemies/robots/cog.gd" id="1_b67wh"]
[ext_resource type="Texture2D" uid="uid://bicw6v011hwn8" path="res://assets/enemies/robots/cog/robot1_reload.png" id="1_k5h12"]
[ext_resource type="Texture2D" uid="uid://c76nwxwjsney1" path="res://assets/effects/robot_death/explosionSmoke2.png" id="2_bw4ld"]
[ext_resource type="Texture2D" uid="uid://bkifrk3orc070" path="res://assets/effects/robot_death/explosionSmoke3.png" id="3_efaiw"]
[ext_resource type="Texture2D" uid="uid://bfd8jtx3tya8n" path="res://assets/effects/robot_death/explosionSmoke4.png" id="4_maxyq"]
[ext_resource type="Texture2D" uid="uid://cxfhod374t8ac" path="res://assets/effects/robot_death/explosionSmoke5.png" id="5_kfg21"]
[ext_resource type="AudioStream" uid="uid://c0j7l2dcmfa2" path="res://assets/sounds/Material Layer Metal C.wav" id="8_6x446"]
[ext_resource type="Script" path="res://components/damage_component.gd" id="9_npum8"]
[ext_resource type="Script" path="res://components/health_component.gd" id="10_oy57d"]
[ext_resource type="PackedScene" uid="uid://boec0e7ocyg1x" path="res://components/hitbox_component.tscn" id="11_xcmyv"]
[ext_resource type="Script" path="res://components/path_follow_component.gd" id="12_fawni"]
[ext_resource type="Script" path="res://components/velocity_component.gd" id="13_3mnga"]

[sub_resource type="SpriteFrames" id="SpriteFrames_525do"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3bavs")
}, {
"duration": 1.0,
"texture": ExtResource("2_bw4ld")
}, {
"duration": 1.0,
"texture": ExtResource("3_efaiw")
}, {
"duration": 1.0,
"texture": ExtResource("4_maxyq")
}, {
"duration": 1.0,
"texture": ExtResource("5_kfg21")
}],
"loop": false,
"name": &"die",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k5h12")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xhx5n"]
radius = 24.6154
height = 49.2308

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h2gkj"]
radius = 24.6154
height = 49.2308

[node name="PistonPath" type="PathFollow2D"]
loop = false

[node name="Piston" type="CharacterBody2D" parent="." groups=["enemy", "robot"]]
scale = Vector2(1.3, 1.3)
collision_mask = 4
script = ExtResource("1_b67wh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Piston"]
sprite_frames = SubResource("SpriteFrames_525do")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piston"]
shape = SubResource("CapsuleShape2D_xhx5n")

[node name="DeathSound" type="AudioStreamPlayer" parent="Piston"]
stream = ExtResource("8_6x446")

[node name="DamageComponent" type="Node2D" parent="Piston"]
script = ExtResource("9_npum8")

[node name="HealthComponent" type="Node2D" parent="Piston"]
script = ExtResource("10_oy57d")
max_health = 4.0

[node name="HitboxComponent" parent="Piston" instance=ExtResource("11_xcmyv")]
collision_layer = 1

[node name="Hitbox" parent="Piston/HitboxComponent" index="0"]
shape = SubResource("CapsuleShape2D_h2gkj")

[node name="PathFollowComponent2" type="Node2D" parent="Piston" node_paths=PackedStringArray("velocity_component")]
script = ExtResource("12_fawni")
velocity_component = NodePath("../VelocityComponent")

[node name="VelocityComponent" type="Node2D" parent="Piston"]
script = ExtResource("13_3mnga")
speed = 200

[connection signal="animation_finished" from="Piston/AnimatedSprite2D" to="Piston" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="dead" from="Piston/HealthComponent" to="Piston" method="_on_health_component_dead"]

[editable path="Piston/HitboxComponent"]
